--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>Your Text Here</h1>
+    <h1>mathpunch</h1>
     <button onclick="window.location.href='https://www.example.com';">Click Me</button>
 </body>
 </html>
